--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,6 +2,7 @@
     "Modern PySide6 App": "Modern PySide6 App",
     "Text Editor": "Text Editor",
     "Settings": "Settings",
+    "General": "General",
     "Enter your text here...": "Enter your text here...",
     "Theme:": "Theme:",
     "Language:": "Language:",
