--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -2,6 +2,7 @@
     "Modern PySide6 App": "Современное Приложение на PySide6",
     "Text Editor": "Текстовый Редактор",
     "Settings": "Настройки",
+    "General": "Общие",
     "Enter your text here...": "Введите ваш текст здесь...",
     "Theme:": "Тема:",
     "Language:": "Язык:",
