--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -2,6 +2,7 @@
     "Modern PySide6 App": "Сучасний Додаток на PySide6",
     "Text Editor": "Текстовий Редактор",
     "Settings": "Налаштування",
+    "General": "Загальні",
     "Enter your text here...": "Введіть ваш текст тут...",
     "Theme:": "Тема:",
     "Language:": "Мова:",
