--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -7,5 +7,35 @@
     "Theme:": "Тема:",
     "Language:": "Мова:",
     "Restart required": "Потрібне перезавантаження",
-    "The language change will take effect after restarting the application.": "Зміна мови набуде чинності після перезапуску програми."
+    "The language change will take effect after restarting the application.": "Зміна мови набуде чинності після перезапуску програми.",
+    "API": "API",
+    "Languages": "Мови",
+    "API Key:": "API Ключ:",
+    "Check Connection": "Перевірити З'єднання",
+    "Balance:": "Баланс:",
+    "Balance: -": "Баланс: -",
+    "Checking...": "Перевірка...",
+    "Error": "Помилка",
+    "API key is missing.": "API ключ відсутній.",
+    "Success": "Успішно",
+    "Connection successful.": "З'єднання успішне.",
+    "Connection failed:": "Помилка з'єднання:",
+    "Enter language code (e.g., en)": "Введіть код мови (наприклад, en)",
+    "Language Settings": "Налаштування Мови",
+    "Translation Prompt:": "Промпт для Перекладу:",
+    "Model:": "Модель:",
+    "Language already exists.": "Мова вже існує.",
+    "Remove Language": "Видалити Мову",
+    "Are you sure you want to remove '{lang_code}'?": "Ви впевнені, що хочете видалити '{lang_code}'?",
+    "Authentication": "Аутентифікація",
+    "Check Connection & Get Balance": "Перевірити З'єднання та Баланс",
+    "Model Management": "Керування Моделями",
+    "Add Model": "Додати Модель",
+    "Remove Selected Model": "Видалити Обрану Модель",
+    "Info": "Інфо",
+    "Model already in the list.": "Модель вже є у списку.",
+    "Temperature:": "Температура:",
+    "Max Tokens:": "Макс. Токени:",
+    "OpenRouter Usage": "Використання OpenRouter",
+    "Press 'Check Connection' to load available models.": "Натисніть 'Перевірити З'єднання', щоб завантажити доступні моделі."
 }
