--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,41 +1,21 @@
 {
-    "Modern PySide6 App": "Modern PySide6 App",
-    "Text Editor": "Text Editor",
-    "Settings": "Settings",
-    "General": "General",
-    "Enter your text here...": "Enter your text here...",
-    "Theme:": "Theme:",
-    "Language:": "Language:",
-    "Restart required": "Restart required",
-    "The language change will take effect after restarting the application.": "The language change will take effect after restarting the application.",
-    "API": "API",
-    "Languages": "Languages",
-    "API Key:": "API Key:",
-    "Check Connection": "Check Connection",
-    "Balance:": "Balance:",
-    "Balance: -": "Balance: -",
-    "Checking...": "Checking...",
-    "Error": "Error",
-    "API key is missing.": "API key is missing.",
-    "Success": "Success",
-    "Connection successful.": "Connection successful.",
-    "Connection failed:": "Connection failed:",
-    "Enter language code (e.g., en)": "Enter language code (e.g., en)",
-    "Language Settings": "Language Settings",
-    "Translation Prompt:": "Translation Prompt:",
-    "Model:": "Model:",
-    "Language already exists.": "Language already exists.",
-    "Remove Language": "Remove Language",
-    "Are you sure you want to remove '{lang_code}'?": "Are you sure you want to remove '{lang_code}'?",
-    "Authentication": "Authentication",
-    "Check Connection & Get Balance": "Check Connection & Get Balance",
-    "Model Management": "Model Management",
-    "Add Model": "Add Model",
-    "Remove Selected Model": "Remove Selected Model",
-    "Info": "Info",
-    "Model already in the list.": "Model already in the list.",
-    "Temperature:": "Temperature:",
-    "Max Tokens:": "Max Tokens:",
-    "OpenRouter Usage": "OpenRouter Usage",
-    "Press 'Check Connection' to load available models.": "Press 'Check Connection' to load available models."
+    "app_title": "Combine",
+    "text_processing_tab": "Text Processing",
+    "settings_tab": "Settings",
+    "general_tab": "General",
+    "api_tab": "API",
+    "languages_tab": "Languages",
+    "prompts_tab": "Prompts",
+    "montage_tab": "Montage",
+    "subtitles_tab": "Subtitles",
+    "templates_tab": "Templates",
+    "openrouter_tab": "OpenRouter",
+    "audio_tab": "Audio",
+    "image_tab": "Image",
+    "dataimpulse_tab": "DataImpulse",
+    "language_label": "Interface language:",
+    "theme_label": "Theme:",
+    "light_theme": "Light",
+    "dark_theme": "Dark",
+    "black_theme": "Black (Amoled)"
 }
