--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -1,41 +1,21 @@
 {
-    "Modern PySide6 App": "Сучасний Додаток на PySide6",
-    "Text Editor": "Текстовий Редактор",
-    "Settings": "Налаштування",
-    "General": "Загальні",
-    "Enter your text here...": "Введіть ваш текст тут...",
-    "Theme:": "Тема:",
-    "Language:": "Мова:",
-    "Restart required": "Потрібне перезавантаження",
-    "The language change will take effect after restarting the application.": "Зміна мови набуде чинності після перезапуску програми.",
-    "API": "API",
-    "Languages": "Мови",
-    "API Key:": "API Ключ:",
-    "Check Connection": "Перевірити З'єднання",
-    "Balance:": "Баланс:",
-    "Balance: -": "Баланс: -",
-    "Checking...": "Перевірка...",
-    "Error": "Помилка",
-    "API key is missing.": "API ключ відсутній.",
-    "Success": "Успішно",
-    "Connection successful.": "З'єднання успішне.",
-    "Connection failed:": "Помилка з'єднання:",
-    "Enter language code (e.g., en)": "Введіть код мови (наприклад, en)",
-    "Language Settings": "Налаштування Мови",
-    "Translation Prompt:": "Промпт для Перекладу:",
-    "Model:": "Модель:",
-    "Language already exists.": "Мова вже існує.",
-    "Remove Language": "Видалити Мову",
-    "Are you sure you want to remove '{lang_code}'?": "Ви впевнені, що хочете видалити '{lang_code}'?",
-    "Authentication": "Аутентифікація",
-    "Check Connection & Get Balance": "Перевірити З'єднання та Баланс",
-    "Model Management": "Керування Моделями",
-    "Add Model": "Додати Модель",
-    "Remove Selected Model": "Видалити Обрану Модель",
-    "Info": "Інфо",
-    "Model already in the list.": "Модель вже є у списку.",
-    "Temperature:": "Температура:",
-    "Max Tokens:": "Макс. Токени:",
-    "OpenRouter Usage": "Використання OpenRouter",
-    "Press 'Check Connection' to load available models.": "Натисніть 'Перевірити З'єднання', щоб завантажити доступні моделі."
+    "app_title": "Комбайн",
+    "text_processing_tab": "Обробка тексту",
+    "settings_tab": "Налаштування",
+    "general_tab": "Загальні",
+    "api_tab": "API",
+    "languages_tab": "Мови",
+    "prompts_tab": "Промти",
+    "montage_tab": "Монтаж",
+    "subtitles_tab": "Субтитри",
+    "templates_tab": "Шаблони",
+    "openrouter_tab": "OpenRouter",
+    "audio_tab": "Аудіо",
+    "image_tab": "Зображення",
+    "dataimpulse_tab": "DataImpulse",
+    "language_label": "Мова інтерфейсу:",
+    "theme_label": "Тема оформлення:",
+    "light_theme": "Світла",
+    "dark_theme": "Темна",
+    "black_theme": "Чорна (Amoled)"
 }
