--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,41 +1,21 @@
 {
-    "Modern PySide6 App": "Современное Приложение на PySide6",
-    "Text Editor": "Текстовый Редактор",
-    "Settings": "Настройки",
-    "General": "Общие",
-    "Enter your text here...": "Введите ваш текст здесь...",
-    "Theme:": "Тема:",
-    "Language:": "Язык:",
-    "Restart required": "Требуется перезагрузка",
-    "The language change will take effect after restarting the application.": "Изменение языка вступит в силу после перезапуска приложения.",
-    "API": "API",
-    "Languages": "Языки",
-    "API Key:": "API Ключ:",
-    "Check Connection": "Проверить Соединение",
-    "Balance:": "Баланс:",
-    "Balance: -": "Баланс: -",
-    "Checking...": "Проверка...",
-    "Error": "Ошибка",
-    "API key is missing.": "API ключ отсутствует.",
-    "Success": "Успешно",
-    "Connection successful.": "Соединение успешно.",
-    "Connection failed:": "Ошибка соединения:",
-    "Enter language code (e.g., en)": "Введите код языка (например, en)",
-    "Language Settings": "Настройки Языка",
-    "Translation Prompt:": "Промпт для Перевода:",
-    "Model:": "Модель:",
-    "Language already exists.": "Язык уже существует.",
-    "Remove Language": "Удалить Язык",
-    "Are you sure you want to remove '{lang_code}'?": "Вы уверены, что хотите удалить '{lang_code}'?",
-    "Authentication": "Аутентификация",
-    "Check Connection & Get Balance": "Проверить Соединение и Баланс",
-    "Model Management": "Управление Моделями",
-    "Add Model": "Добавить Модель",
-    "Remove Selected Model": "Удалить Выбранную Модель",
-    "Info": "Инфо",
-    "Model already in the list.": "Модель уже в списке.",
-    "Temperature:": "Температура:",
-    "Max Tokens:": "Макс. Токены:",
-    "OpenRouter Usage": "Использование OpenRouter",
-    "Press 'Check Connection' to load available models.": "Нажмите 'Проверить Соединение', чтобы загрузить доступные модели."
+    "app_title": "Комбайн",
+    "text_processing_tab": "Обработка текста",
+    "settings_tab": "Настройки",
+    "general_tab": "Общие",
+    "api_tab": "API",
+    "languages_tab": "Языки",
+    "prompts_tab": "Промты",
+    "montage_tab": "Монтаж",
+    "subtitles_tab": "Субтитры",
+    "templates_tab": "Шаблоны",
+    "openrouter_tab": "OpenRouter",
+    "audio_tab": "Аудио",
+    "image_tab": "Изображения",
+    "dataimpulse_tab": "DataImpulse",
+    "language_label": "Язык интерфейса:",
+    "theme_label": "Тема оформления:",
+    "light_theme": "Светлая",
+    "dark_theme": "Темная",
+    "black_theme": "Черная (Amoled)"
 }
