--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -20,5 +20,19 @@
     "black_theme": "Black (Amoled)",
     "total_chars_label": "Characters",
     "clean_chars_label": "Clean characters",
-    "paragraphs_label": "Paragraphs"
+    "paragraphs_label": "Paragraphs",
+    "openrouter_api_key": "OpenRouter API Key:",
+    "enter_api_key": "Enter your API key",
+    "check_connection": "Check Connection",
+    "connection_status_not_checked": "Status: Not checked",
+    "connection_status_checking": "Status: Checking...",
+    "connection_status_connected": "Status: Connected",
+    "connection_status_error": "Status: Error",
+    "connection_status_not_configured": "Status: Not configured",
+    "balance_label": "Balance:",
+    "balance_loading": "Balance: Loading...",
+    "models": "Models",
+    "enter_model_name": "Enter model name",
+    "add_model": "Add",
+    "remove_model": "Remove"
 }
