--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -58,5 +58,7 @@
     "stage_images": "Картинки",
     "stage_voiceover": "Озвучка",
     "stage_subtitles": "Субтитри",
-    "stage_montage": "Монтаж"
+    "stage_montage": "Монтаж",
+    "select_all": "Вибрати все",
+    "deselect_all": "Зняти вибір"
 }
