--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -67,5 +67,6 @@
     "queue_tab": "Очередь",
     "add_to_queue": "Добавить в очередь",
     "enter_task_name_title": "Введите название задачи",
-    "enter_task_name_label": "Название задачи:"
+    "enter_task_name_label": "Название задачи:",
+    "default_task_name": "Задача"
 }
