--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -68,5 +68,6 @@
     "add_to_queue": "Додати до черги",
     "enter_task_name_title": "Введіть назву завдання",
     "enter_task_name_label": "Назва завдання:",
-    "default_task_name": "Завдання"
+    "default_task_name": "Завдання",
+    "task_header": "Завдання та етапи"
 }
