--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -68,5 +68,6 @@
     "add_to_queue": "Добавить в очередь",
     "enter_task_name_title": "Введите название задачи",
     "enter_task_name_label": "Название задачи:",
-    "default_task_name": "Задача"
+    "default_task_name": "Задача",
+    "task_header": "Задачи и этапы"
 }
