--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -77,5 +77,12 @@
     "tokens_label": "Max tokens:",
     "start_processing": "Start Processing",
     "processing_complete_title": "Processing Complete",
-    "processing_complete_message": "Queue processing has finished.\n\nTotal time: {}"
+    "processing_complete_message": "Queue processing has finished.\n\nTotal time: {}",
+    "delete_task": "Delete Task",
+    "delete_language": "Delete Language",
+    "delete_stage": "Delete Stage",
+    "confirm_deletion_title": "Confirm Deletion",
+    "confirm_task_deletion_message": "Are you sure you want to delete task \"{}\"",
+    "confirm_language_deletion_message": "Are you sure you want to delete language \"{}\" from task \"{}\"",
+    "confirm_stage_deletion_message": "Are you sure you want to delete stage \"{}\" for language \"{}\" from task \"{}\""
 }
