--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -77,5 +77,12 @@
     "tokens_label": "Макс. токенов:",
     "start_processing": "Начать обработку",
     "processing_complete_title": "Обработка завершена",
-    "processing_complete_message": "Обработка очереди завершена.\n\nОбщее время: {}"
+    "processing_complete_message": "Обработка очереди завершена.\n\nОбщее время: {}",
+    "delete_task": "Удалить задачу",
+    "delete_language": "Удалить язык",
+    "delete_stage": "Удалить этап",
+    "confirm_deletion_title": "Подтверждение удаления",
+    "confirm_task_deletion_message": "Вы уверены, что хотите удалить задачу \"{}\"?",
+    "confirm_language_deletion_message": "Вы уверены, что хотите удалить язык \"{}\" из задачи \"{}\"?",
+    "confirm_stage_deletion_message": "Вы уверены, что хотите удалить этап \"{}\" для языка \"{}\" из задачи \"{}\"?"
 }
