--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -77,5 +77,12 @@
     "tokens_label": "Макс. токенів:",
     "start_processing": "Почати обробку",
     "processing_complete_title": "Обробку завершено",
-    "processing_complete_message": "Обробку черги завершено.\n\nЗагальний час: {}"
+    "processing_complete_message": "Обробку черги завершено.\n\nЗагальний час: {}",
+    "delete_task": "Видалити завдання",
+    "delete_language": "Видалити мову",
+    "delete_stage": "Видалити етап",
+    "confirm_deletion_title": "Підтвердження видалення",
+    "confirm_task_deletion_message": "Ви впевнені, що бажаєте видалити завдання \"{}\"",
+    "confirm_language_deletion_message": "Ви впевнені, що бажаєте видалити мову \"{}\" з завдання \"{}\"",
+    "confirm_stage_deletion_message": "Ви впевнені, що бажаєте видалити етап \"{}\" для мови \"{}\" з завдання \"{}\""
 }
