--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -86,5 +86,7 @@
     "confirm_deletion_title": "Confirm Deletion",
     "confirm_task_deletion_message": "Are you sure you want to delete task \"{}\"?",
     "confirm_language_deletion_message": "Are you sure you want to delete language \"{}\" from task \"{}\"",
-    "confirm_stage_deletion_message": "Are you sure you want to delete stage \"{}\" for language \"{}\" from task \"{}\""
+    "confirm_stage_deletion_message": "Are you sure you want to delete stage \"{}\" for language \"{}\" from task \"{}\"",
+    "prompt_content_label": "Prompt for image generation:",
+    "image_model_label": "Image Model:"
 }
