--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -88,5 +88,6 @@
     "confirm_language_deletion_message": "Are you sure you want to delete language \"{}\" from task \"{}\"",
     "confirm_stage_deletion_message": "Are you sure you want to delete stage \"{}\" for language \"{}\" from task \"{}\"",
     "prompt_content_label": "Prompt for image generation:",
-    "image_model_label": "Image Model:"
+    "image_model_label": "Image Model:",
+    "original_text": "Original Text"
 }
