--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -88,5 +88,6 @@
     "confirm_language_deletion_message": "Вы уверены, что хотите удалить язык \"{}\" из задачи \"{}\"?",
     "confirm_stage_deletion_message": "Вы уверены, что хотите удалить этап \"{}\" для языка \"{}\" из задачи \"{}\"?",
     "prompt_content_label": "Промт для генерации изображений:",
-    "image_model_label": "Модель для изображений:"
+    "image_model_label": "Модель для изображений:",
+    "original_text": "Оригинальный текст"
 }
