--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -88,5 +88,6 @@
     "confirm_language_deletion_message": "Ви впевнені, що бажаєте видалити мову \"{}\" з завдання \"{}\"",
     "confirm_stage_deletion_message": "Ви впевнені, що бажаєте видалити етап \"{}\" для мови \"{}\" з завдання \"{}\"",
     "prompt_content_label": "Промт для генерації зображень:",
-    "image_model_label": "Модель для зображень:"
+    "image_model_label": "Модель для зображень:",
+    "original_text": "Оригінальний текст"
 }
