--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -89,5 +89,8 @@
     "confirm_stage_deletion_message": "Вы уверены, что хотите удалить этап \"{}\" для языка \"{}\" из задачи \"{}\"?",
     "prompt_content_label": "Промт для генерации изображений:",
     "image_model_label": "Модель для изображений:",
-    "original_text": "Оригинальный текст"
+    "original_text": "Оригинальный текст",
+    "all_levels": "Все уровни",
+    "search_logs": "Поиск по логам...",
+    "autoscroll": "Автопрокрутка"
 }
