--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -31,6 +31,8 @@
     "connection_status_not_configured": "Status: Not configured",
     "balance_label": "Balance:",
     "balance_loading": "Balance: Loading...",
+    "balance": "Balance",
+    "balance_error": "Balance: Error",
     "models": "Models",
     "enter_model_name": "Enter model name",
     "add_model": "Add",
