--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -31,6 +31,8 @@
     "connection_status_not_configured": "Статус: Не налаштовано",
     "balance_label": "Баланс:",
     "balance_loading": "Баланс: Завантаження...",
+    "balance": "Баланс",
+    "balance_error": "Баланс: Помилка",
     "models": "Моделі",
     "enter_model_name": "Введіть назву моделі",
     "add_model": "Додати",
