--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -118,5 +118,7 @@
     "googler_usage_failed": "Не вдалося отримати дані",
     "gallery_tab_title": "Галерея",
     "gallery_total_images_label": "Всього зображень: {count}",
-    "gallery_task_group_title": "{title} ({count} зображень)"
+    "gallery_task_group_title": "{title} ({count} зображень)",
+    "confirm_image_deletion_message": "Ви впевнені, що хочете назавжди видалити це зображення з диска?\n\n{}",
+    "regenerate_image_title": "Перегенерувати зображення"
 }
